# DEEPCNNCLASSIFIER

./: .gitignore  README.md  dvc.yaml  requirements.txt  requirements_dev.txt  scores.json  setup.cfg  setup.py  template.py  tox.ini
.github/workflows/: ci.yml
configs/: config.yaml
research/: trials.ipynb
research/mlflow_dir/: example.py
src/DeepClassifier/: __init__.py
src/DeepClassifier/components/: __init__.py  data_ingestion.py  evaluation.py  prepare_base_model.py  prepare_callbacks.py  training.py
src/DeepClassifier/config/: configuration.py
src/DeepClassifier/entity/: __init__.py  config_entity.py
src/DeepClassifier/pipeline/: stage_01_data_ingestion.py  stage_02_prepare_base_model.py  stage_03_prepare_callbacks.py  stage_03_training.py  stage_04_evaluation.py
src/DeepClassifier/utils/: common.py
tests/unit/: test_utils.py
