# It contains certain metadata for our project

[metadata]
license = MIT
license_file = LICENSE 
classifier = 
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent

[options]
install_requires = 
    ensure==1.0.2
python_requires = >=3.7

[options.extras_require]
testing = 
    pytest>=7.1.3      #for unit and integration tests
    mypy>=0.971        #linting purpose library
    flake8>=5.0.4      #removing extra space
    tox>=3.25.1        #for automated testing
    black>=22.8.0      #follow standard pep8 guideline

[options.package_data]
DeepClassifier = py.typed     #dont check error in dependencies

[flake8]
max-line-length = 160
exclude = __init__.py